Preventing scrollbar jump

--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -15,6 +15,10 @@ html, body {
     width: 100%;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 code, pre, .pre {
     padding: 5px;
     margin: 10px 0;
